--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 	<h1>Andreas Keller</h1>
+	<h2>Curriculum Vitae</h2>
+	<h3>Education</h3>
+	<p>2014 - present: Student Bachelor in Computer Science</p>
+	<p>1999 - 2005: Master in Biology</p>
 </body>
 </html>
